# Aero3D

./: .gitignore  .gitmodules  CMakeLists.txt  Dependencies.lua  README.md
Engine/: CMakeLists.txt  premake5.lua
Engine/src/Core/: Application.cpp  Application.h  Configuration.cpp  Configuration.h  Window.cpp  Window.h
Engine/src/Event/: EventBus.cpp  EventBus.h  Events.h
Engine/src/Graphics/: Allocators.h  Buffer.h  Buffers.h  CommandBuffer.h  CommandList.h  Context.h  GraphicsContext.cpp  GraphicsContext.h  GraphicsDevice.h  GraphicsFabric.h  GraphicsPipeline.h  Queue.h  RenderAPI.h  RenderCommand.cpp  RenderCommand.h  RenderSystem.cpp  RenderSystem.h  Renderer.h  ResourceFactory.h  Resources.h  Swapchain.h  Viewport.h
Engine/src/Graphics/Vulkan/: VulkanBootstrap.cpp  VulkanBootstrap.h  VulkanCommandBuffer.cpp  VulkanCommandBuffer.h  VulkanCommandList.cpp  VulkanCommandList.h  VulkanContext.cpp  VulkanContext.h  VulkanGraphicsDevice.cpp  VulkanGraphicsDevice.h  VulkanQueue.cpp  VulkanQueue.h  VulkanResourceFactory.cpp  VulkanResourceFactory.h  VulkanResources.cpp  VulkanResources.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanUtils.cpp  VulkanUtils.h  VulkanViewport.cpp  VulkanViewport.h
Engine/src/IO/: NativeVFDirectory.h  NativeVFile.h  VFDirectory.h  VFS.cpp  VFS.h  VFile.h
Engine/src/Platform/Linux/IO/: NativeVDirectory.cpp  NativeVFile.cpp
Engine/src/Platform/Vulkan/: VulkanAPI.cpp  VulkanAPI.h  VulkanAllocators.cpp  VulkanAllocators.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanBuffers.cpp  VulkanBuffers.h  VulkanContext.cpp  VulkanContext.h  VulkanGraphicsPipeline.cpp  VulkanGraphicsPipeline.h  VulkanRenderer.cpp  VulkanRenderer.h  VulkanResources.cpp  VulkanResources.h
Engine/src/Platform/Vulkan/Internal/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanCore.cpp  VulkanCore.h  VulkanDescriptors.cpp  VulkanDescriptors.h  VulkanDevice.cpp  VulkanDevice.h  VulkanQueue.cpp  VulkanQueue.h  VulkanSwapchain.cpp  VulkanSwapchain.h  VulkanUtils.cpp  VulkanUtils.h  VulkanWrappers.cpp  VulkanWrappers.h
Engine/src/Platform/Windows/IO/: NativeVDirectory.cpp  NativeVFile.cpp
Engine/src/Resource/: ResourceManager.cpp  ResourceManager.h  Resources.cpp  Resources.h
Engine/src/Scene/: Actor.cpp  Actor.h  Components.cpp  Components.h  GameObject.cpp  GameObject.h  Scene.cpp  Scene.h
Engine/src/Systems/: RenderSystem.cpp  RenderSystem.h
Engine/src/Utils/: Assert.cpp  Assert.h  Common.h  ImageLoader.cpp  ImageLoader.h  Log.h  StartupHelper.cpp  StartupHelper.h  StringManip.cpp  StringManip.h
Sandbox/: CMakeLists.txt
Sandbox/res/shaders/: pixel.glsl  vertex.glsl
Sandbox/src/: Sandbox.cpp
